MobileApp/www/css/style.css
@font-face {
    font-family: robotoThin !important;
    src: url(../assets/font/Roboto-Thin.ttf);
}
@font-face {
    font-family: robotoBold !important;
    src: url(../assets/font/Roboto-Bold.ttf);
}
*
{
    font-family: robotoThin;
}
.sidebar {
  height: 100% !important;
  width: 100% !important;
  right: 104% !important;
}
.bg-clr
{
  background-color: #EEEEEE;
  color: #3C4858;
}
#id
{
  height: 30%;
}
/*
.segmnt
{
  width: 80%;
  border: 1px solid orange;
  border-radius: 8px;
}*/
.segment-button.segment-activated
{
  border-bottom: none !important;
  background-color: #00bcd4 !important;
  color: #FFFFFF !important;
}

/*
.segment-button.segment-activated:first-child
{
  border-bottom-left-radius: 7px !important;
  border-top-left-radius: 7px !important;
}
.segment-button.segment-activated:last-child
{
  border-top-right-radius: 7px !important;
  border-bottom-right-radius: 7px !important;
}*/
.container-scroll {
  overflow-x: auto;
}
.container-scroll > .row {
  /*width: 200%; !* = 100% * 4/3 *!*/
  width:2300px;
}
.hariz-scroll-con
{
    padding:10px 15px;
    width: 1800px;
}
container-scroll::-webkit-scrollbar-track
{
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  border-radius: 10px;

}

container-scroll::-webkit-scrollbar
{

  width: 12px;

}

container-scroll::-webkit-scrollbar-thumb
{

  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);

}
.primary-clr
{
  color:#00bcd4 !important;
}
.display-inline
{
  display:inline;
}
.border-bottom
{
  margin: 0 20px 10px;
  border-bottom: 1px solid #eeeeee;
}
.align-right
{
  float:right;
}
.margin-auto
{
  margin: auto;
}
.margin-top25
{
  margin-top:25%;
}
.margin-tp25
{
  margin: 25px 0 0 0 !important;
}
.margn-btom20
{
  margin-bottom:20px;
}
.padding-left5
{
  padding-left: 5px !important;
}
.fnt-12
{
  font-size: 12px !important;
}
.pop-icon
{
  float: right;
  margin: 0 !important;
  height: 16px !important;
  font-size: 12px !important;
}
.padding-left-right0
{
  padding-left: 0 !important;
  padding-right: 0 !important;
}
.margin0
{
  margin: 0 !important;
}
.ver-center
{
  display: flex !important;
  align-content: center !important;
  align-items: center !important;
}
.remove .item-md.item-block .item-inner
{
  display: none;
}
.popover-md .popover-content
{
  /*
  top: 90px !important;
  left: 100px !important;
  padding: 0;
  width: 250px !important;
  padding-right: 10px !important;
  */
}
.lable-clr .label
{
  color:#000000;
}

.hariz-scroll-con
{
  /*padding:10px 15px;*/
 /* width: 1400px;*/
}
.font-size12 p
{
  font-size:12px;
}



/* calendar css */
.Viewcalendartxt h2
{
     font-size: 18px;
     padding-left: 10px;
}
#fullCalendarCon .fc-unthemed .fc-today {
    background: #F44336 !important;
    color: #fff !important;
}
#fullCalendarCon .fc-toolbar h2
{
      font-size: 18px !important;
      margin-bottom: 5px;
}
#fullCalendarCon .fc-toolbar .fc-left {
    float: none;
    display: block;
}
#fullCalendarCon .fc-toolbar .fc-right
{
     margin-top: 14px;
}
.fc button, .fc button:hover, .fc button:focus, .fc button:active, .fc button.active, .fc button:active:focus, .fc button:active:hover, .fc button.active:focus, .fc button.active:hover, .open>.fc button.dropdown-toggle, .open>.fc button.dropdown-toggle:focus, .open>.fc button.dropdown-toggle:hover, .fc button.btn-primary, .fc button.btn-primary:hover, .fc button.btn-primary:focus, .fc button.btn-primary:active, .fc button.btn-primary.active, .fc button.btn-primary:active:focus, .fc button.btn-primary:active:hover, .fc button.btn-primary.active:focus, .fc button.btn-primary.active:hover, .open>.fc button.btn-primary.dropdown-toggle, .open>.fc button.btn-primary.dropdown-toggle:focus, .open>.fc button.btn-primary.dropdown-toggle:hover
{
    background-color: #ff9800;
}

.icon-right
{
  padding-right:5px;
  float:right;
}
.margin-top5
{
  margin-top:5px !important;
}
.segment-md-clr-blue .segment-button
{
  border-bottom-color: #00bcd4;
}
.round
{
  background-color: #FFFFFF !important;
}
.bg-grey
{
  background-color:#EEEEEE !important;
}
.clr-orange
{
  color: #ff9800;
}
.padding-top0
{
  padding-top: 0 !important;
}
.table-sales
{
  margin-top: 0 !important;
}
.padding-right2
{
  padding-right: 2px;
}
.padding-left2
{
  padding-left: 2px;
}
.white-bg
{
  background-color: #FFFFFF;
}
table tr
{
  height:calc(100vh-85vh);
}
.fnt-18
{
  font-size: 18px;
}

.red
{
  color: red;
}
.green
{
  color: green;
}
.blue
{
  color: deepskyblue;
}
.padding-bottom0
{
  padding-bottom:0 !important;
}
.padding-right0
{
  padding-right: 0 !important;
}
.padding-left0
{
  padding-left: 0 !important;
}
.card
{
  margin: 5px 0 15px 0 !important;
}
.segment-button.segment-activated
{
  background-color: #191919 !important;
}

.segment-md .segment-button
{
  color: orange !important;
}
.clr-red
{
  color:#f53d3d;
}
.red-card
{
  box-shadow: 0 1px 4px 0 rgb(255, 0, 0) !important;
}
.green-card
{
  box-shadow: 0 1px 4px 0 rgb(0, 255, 0) !important;
}
.blue-card
{
  box-shadow: 0 1px 4px 0 deepskyblue !important;

}
.padding10
{
  padding: 10px;
}
.emp-list .item-block .item-inner
{
    border-bottom: 0 !important;
}
.emp .item-inner
{
    border-bottom: 0 !important;
}
.emp-round
{
  width: 40px;
  height: 40px;
  border-radius:50%;
  background-color: #000000;
}
.emp-round p
{
  font-weight:bold;
  color:#ff9800 !important;
  text-align: center !important;
  vertical-align: middle !important;
  line-height: 38px !important;
}
.width-round
{
  width: 40px;
  height: 40px;
}
.width-round img
{
  border-radius: 50% !important;
}
.align-right
{
  float: right;
}
.add-btn
{
  width: 40px;
  color: orange !important;
  font-size: 20px !important;
}
.select-box
{
  max-width:100%;
  border-bottom: 1px solid #dedede;
}
.camera-btn
{
  background-color: orange;
  color: #FFFFFF;
  border-radius: 50%;
  width: 35px;
  height: 35px;
  font-size: 20px;
  line-height: 25px;
}
.line-height
{
  line-height:35px;
}
.margin-bottom25
{
  margin-bottom:25px !important;
}
.margin-bottom5
{
  margin-bottom: 5px;
}
.content-md
{
  background-color:#EEEEEE !important;
}
.width98
{
  width:98%;
}
.margin-side-auto
{
  margin-left: auto !important;
  margin-right: auto !important;
}


.item-label .label-md
{
  margin: 0 !important;
}
.radio-label
{
  color: black;
  text-align: left;
}
.width50
{
  width: 50% !important;
}
.inline-block
{
  display: inline-block !important;
}

.select-rate {
  position: absolute;
}
.table>thead>tr>th
{
  font-size:14px !important;
}
.padding-bottom3
{
  padding-bottom: 3px !important;
}
.width15
{
  width: 15px !important;
}
.table-scroll
{
  width: 500px;
  overflow-x: scroll;
}
.width100
{
  width: 100px;
}
.table-data
{
  width: 85px;
  overflow: hidden;
  white-space: initial !important;
}
.width95
{
  width: 95% !important;
}
.error
{
  color:red;
}
.fnt-wt
{
  font-weight: 300 !important;
}
.bottom-border
{
  border-bottom: 1px solid #eeeeee !important;
}
.login-bg-img
{
 /* background: url('img/login.jpeg'); */
}
.width90
{
  width: 90%;
}
.padding-top25
{
  padding-top: 25px !important;
}
.clr-blk
{
  color: #000000;
}
.clr-blue
{
  color: #00bcd4;
}
.bottom-div
{
  position:absolute;
  bottom:0;
}
.clr-white
{
  color: #FFFFFF;
}
.margin-bottom
{
  margin-bottom: 15%;
}
.pos-abs
{
  position: absolute;
  top: 9%;
  left: 5%;
}
.card [data-background-color]
{
  margin: -20px 60px 0 !important;
}
a:hover, a:focus
{
  color: #000000;
}
.login .scroll-content
{
  background: url(img/login.jpeg);
}
.padding-right5
{
    padding-right: 5px;
}
.padding-bottom5
{
    padding-bottom: 5px;
}
.padding-top40
{
  padding-top: 40px !important;
}
.error-msg {
  color: #f44336;
}
.form-group.is-focused .form-control
{
  background-image: linear-gradient(#ff9800, #ff9800), linear-gradient(#D2D2D2, #D2D2D2) !important;
}
.form-control,
.form-group .form-control
{
  background-image: linear-gradient(#ff9800, #ff9800), linear-gradient(#D2D2D2, #D2D2D2) !important;
}
.form-group.has-error .form-control {
  background-image: linear-gradient(#f44336, #f44336), linear-gradient(#D2D2D2, #D2D2D2) !important;
}
.icon-round
{
  width: 100% !important;
  height: 62% !important;
  border-radius: 50% !important;
}
.icon-round-green
{
  border: 1px solid #4caf50 !important;
  color: #4caf50 !important;
}
.icon-round-red
{
  border: 1px solid #f44336 !important;
  color: #f44336 !important;
}
.icon-round-blue
{
  border: 1px solid #00acc1 !important;
  color: #00acc1 !important;
}
.fnt-24
{
  font-size: 24px !important;
}
.timeline>li>.timeline-badge
{
  width: 25px !important;
  height: 25px !important;

}
.item-fnt p
{
  font-weight: 300;
}
.item-fnt .label-md
{
  margin:0 !important;
}
.padding-left16
{
  padding-left: 16px !important;
}
.padding-right10
{
  padding-right: 10px !important;
}
.padding-left10
{
  padding-left:10px;
}
.border-btm
{
  border-bottom: 1px solid #eeeeee;
}
.padding-top5
{
  padding-top: 5px !important;
}
.ln-ght20 p
{
  line-height: 20px !important;
}
.q-round
{
  width: 90% !important;
  height: 80% !important;
  border-radius: 50% !important;
  border: 1px solid #ff9800;
}
.fab-md-dark
{
  color: #ff9800 !important;
}
.bg-orange
{
  background-color:#ff9800;
}
ion-fab-list
{
  left:-9px !important;
}
.empl-round
{
  width: 25%;
  border-radius: 50%;
  background-color: #ccc;
  padding: 7px;
}
.view-img ion-backdrop
{
  opacity: 0.7 !important;
}
.job-img
{
  transform: rotate(90deg);
}

.padding-bottom0{
  
}

